[package]
name = "lurk_world"
version = "0.1.0"
authors = ["Austin Jenkins <austin15328@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.2"
bitflags = "1.2.1"
lurk_macros = { path = "lurk_macros" }
rlua = "0.17.0"
clap = { git = "https://github.com/clap-rs/clap/" }
